# Zk-Census

./: .gitignore  .vercelignore  COMPLETE_SETUP.md  DEPLOYMENT.md  README.md  start-dev.ps1  test-e2e.ps1  test-system.js  vercel.json
api/: package.json  server.js
census/: Anchor.toml  PROJECT_STATUS.md  PROOF_SUBMISSION_FIX.md  README.md  REGISTRATION_FIX.md  SETUP_GUIDE.md  package.json  tsconfig.json
census/.cargo/: config.toml
census/app/: next.config.js  package.json  tailwind.config.js
census/circuits/: README.md  census.circom  convert_vkey.js  package.json  vkey_rust.txt
census/docs/: PENDING_SERVICES.md  ZASSPORT_INTEGRATION.md
census/migrations/: initialize.ts
census/programs/census/: Cargo.toml
census/programs/census/src/: constants.rs  contexts.rs  error.rs  groth16.rs  instructions.rs  lib.rs  state.rs
census/programs/census/src/instructions/: advance_scope.rs  initialize.rs  register_citizen.rs  set_merkle_root.rs  submit_attestation.rs  submit_census.rs
census/scripts/: advance-scope.ts  analyze-account-correct.js  analyze-account.js  build-and-set-merkle.ts  build-merkle-tree.ts  build-merkle.ts  check-admin.ts  check-merkle-root.ts  diagnose-tx.ts  export-commitments.ts  initialize.ts  register-citizens.ts  reset-merkle-root.js  set-merkle-proper.js  set-merkle-root-anchor.ts  set-merkle-root-web3.js  set-merkle-root.js  (+10 more)
indexer/: adminService.js  api.js  index.js  merkleTree.js  package.json  registration.js  storage.js  sync-data.js  sync-merkle-root.js
tests/: e2e-test.mjs  package.json  test-attestation-flow.mjs  test-data.json
(+42 files in other folders)
