[package]
name = "census"
version = "0.1.0"
description = "zk-Census: Privacy-preserving population counter for Network States"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "census"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
spl-account-compression = { version = "0.4.2", features = ["cpi"] }
bytemuck = "1.14"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
